marcos/tests/ui/fail_missing_mode.stderr
error: expected #[attr_path(name)] or #[intersection]
 --> tests/ui/fail_missing_mode.rs:3:10
  |
3 | #[derive(ParseAttributes)]
  |          ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ParseAttributes` (in Nightly builds, run with -Z macro-backtrace for more info)
