marcos/tests/ui/fail_missing_mode.rs
use marcos::ParseAttributes;

#[derive(ParseAttributes)]
struct NoMode {
    name: Option<String>,
}

fn main() {}
